Feat : Profile API & Refactor pakages